engine/wrapper/resources/styles/assets.cp.styles.css
/* Login/MySQL form */
body.cp-login,
body.cp-mysql {
	height: 100%;
	display: -ms-flexbox;
	display: -webkit-box;
	display: flex;
	-ms-flex-align: center;
	-ms-flex-pack: center;
	-webkit-box-align: center;
	align-items: center;
	-webkit-box-pack: center;
	justify-content: center;
	padding-top: 40px;
	padding-bottom: 40px;
	background-color: #f5f5f5;
}

.cp-login .form-signin,
.cp-mysql .form-signin {
	width: 100%;
	max-width: 330px;
	padding: 15px;
	margin: 0 auto;
}

.cp-login .form-signin label,
.cp-mysql .form-signin label {
	cursor: pointer;
}

.cp-login .form-signin .form-control,
.cp-mysql .form-signin .form-control {
	position: relative;
	box-sizing: border-box;
	height: auto;
	padding: 10px;
	font-size: 16px;
}

.cp-login .form-signin .form-control:focus,
.cp-mysql .form-signin .form-control:focus {
	z-index: 2;
}

.cp-login .form-signin input[type="email"] {
	margin-bottom: -1px;
	border-bottom-right-radius: 0;
	border-bottom-left-radius: 0;
}

.cp-login .form-signin input[type="password"] {
	margin-bottom: 10px;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
}

